--- a/templates/articles_list.html
+++ b/templates/articles_list.html
@@ -41,6 +41,7 @@
         <p class="has-text-centered is-warning" style="display:block;">Siz qidirayotgan ma'lumot topilmadi</p>
         <br><br>
         <section class="section">
+            <p>Lorem ipsum dolor sit amet.</p>
             <img src="{% static '/images/header.svg' %}" alt="">
         </section>
         {% endif %}
